Making the fixtures selectable

--- a/HTMLPages/resultInput.html
+++ b/HTMLPages/resultInput.html
@@ -42,6 +42,8 @@
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
     <form onSubmit="return formSubmit3()">
+            <!-- Select statement to show all of the fixtures needed for the tournaments -->
+            <!-- There are 380 options as that is the maximum amount that will be generated, when there are 20 teams in a round robin tournament -->
             <select id="fixtureSelected">
               <option id="fixture1"></option>
               <option id="fixture2"></option>
@@ -233,8 +235,199 @@
               <option id="fixture188"></option>
               <option id="fixture189"></option>
               <option id="fixture190"></option>
+              <option id="fixture191"></option>
+              <option id="fixture192"></option>
+              <option id="fixture193"></option>
+              <option id="fixture194"></option>
+              <option id="fixture195"></option>
+              <option id="fixture196"></option>
+              <option id="fixture197"></option>
+              <option id="fixture198"></option>
+              <option id="fixture199"></option>
+              <option id="fixture200"></option>
+              <option id="fixture201"></option>
+              <option id="fixture202"></option>
+              <option id="fixture203"></option>
+              <option id="fixture204"></option>
+              <option id="fixture205"></option>
+              <option id="fixture206"></option>
+              <option id="fixture207"></option>
+              <option id="fixture208"></option>
+              <option id="fixture209"></option>
+              <option id="fixture210"></option>
+              <option id="fixture211"></option>
+              <option id="fixture212"></option>
+              <option id="fixture213"></option>
+              <option id="fixture214"></option>
+              <option id="fixture215"></option>
+              <option id="fixture216"></option>
+              <option id="fixture217"></option>
+              <option id="fixture218"></option>
+              <option id="fixture219"></option>
+              <option id="fixture220"></option>
+              <option id="fixture221"></option>
+              <option id="fixture222"></option>
+              <option id="fixture223"></option>
+              <option id="fixture224"></option>
+              <option id="fixture225"></option>
+              <option id="fixture226"></option>
+              <option id="fixture227"></option>
+              <option id="fixture228"></option>
+              <option id="fixture229"></option>
+              <option id="fixture230"></option>
+              <option id="fixture231"></option>
+              <option id="fixture232"></option>
+              <option id="fixture233"></option>
+              <option id="fixture234"></option>
+              <option id="fixture235"></option>
+              <option id="fixture236"></option>
+              <option id="fixture237"></option>
+              <option id="fixture238"></option>
+              <option id="fixture239"></option>
+              <option id="fixture240"></option>
+              <option id="fixture241"></option>
+              <option id="fixture242"></option>
+              <option id="fixture243"></option>
+              <option id="fixture244"></option>
+              <option id="fixture245"></option>
+              <option id="fixture246"></option>
+              <option id="fixture247"></option>
+              <option id="fixture248"></option>
+              <option id="fixture249"></option>
+              <option id="fixture250"></option>
+              <option id="fixture251"></option>
+              <option id="fixture252"></option>
+              <option id="fixture253"></option>
+              <option id="fixture254"></option>
+              <option id="fixture255"></option>
+              <option id="fixture256"></option>
+              <option id="fixture257"></option>
+              <option id="fixture258"></option>
+              <option id="fixture259"></option>
+              <option id="fixture260"></option>
+              <option id="fixture261"></option>
+              <option id="fixture262"></option>
+              <option id="fixture263"></option>
+              <option id="fixture264"></option>
+              <option id="fixture265"></option>
+              <option id="fixture266"></option>
+              <option id="fixture267"></option>
+              <option id="fixture268"></option>
+              <option id="fixture269"></option>
+              <option id="fixture270"></option>
+              <option id="fixture271"></option>
+              <option id="fixture272"></option>
+              <option id="fixture273"></option>
+              <option id="fixture274"></option>
+              <option id="fixture275"></option>
+              <option id="fixture276"></option>
+              <option id="fixture277"></option>
+              <option id="fixture278"></option>
+              <option id="fixture279"></option>
+              <option id="fixture280"></option>
+              <option id="fixture281"></option>
+              <option id="fixture282"></option>
+              <option id="fixture283"></option>
+              <option id="fixture284"></option>
+              <option id="fixture285"></option>
+              <option id="fixture286"></option>
+              <option id="fixture287"></option>
+              <option id="fixture288"></option>
+              <option id="fixture289"></option>
+              <option id="fixture290"></option>
+              <option id="fixture291"></option>
+              <option id="fixture292"></option>
+              <option id="fixture293"></option>
+              <option id="fixture294"></option>
+              <option id="fixture295"></option>
+              <option id="fixture296"></option>
+              <option id="fixture297"></option>
+              <option id="fixture298"></option>
+              <option id="fixture299"></option>
+              <option id="fixture300"></option>
+              <option id="fixture301"></option>
+              <option id="fixture302"></option>
+              <option id="fixture303"></option>
+              <option id="fixture304"></option>
+              <option id="fixture305"></option>
+              <option id="fixture306"></option>
+              <option id="fixture307"></option>
+              <option id="fixture308"></option>
+              <option id="fixture309"></option>
+              <option id="fixture310"></option>
+              <option id="fixture311"></option>
+              <option id="fixture312"></option>
+              <option id="fixture313"></option>
+              <option id="fixture314"></option>
+              <option id="fixture315"></option>
+              <option id="fixture316"></option>
+              <option id="fixture317"></option>
+              <option id="fixture318"></option>
+              <option id="fixture319"></option>
+              <option id="fixture320"></option>
+              <option id="fixture321"></option>
+              <option id="fixture322"></option>
+              <option id="fixture323"></option>
+              <option id="fixture324"></option>
+              <option id="fixture325"></option>
+              <option id="fixture326"></option>
+              <option id="fixture327"></option>
+              <option id="fixture328"></option>
+              <option id="fixture329"></option>
+              <option id="fixture330"></option>
+              <option id="fixture331"></option>
+              <option id="fixture332"></option>
+              <option id="fixture333"></option>
+              <option id="fixture334"></option>
+              <option id="fixture335"></option>
+              <option id="fixture336"></option>
+              <option id="fixture337"></option>
+              <option id="fixture338"></option>
+              <option id="fixture339"></option>
+              <option id="fixture340"></option>
+              <option id="fixture341"></option>
+              <option id="fixture342"></option>
+              <option id="fixture343"></option>
+              <option id="fixture344"></option>
+              <option id="fixture345"></option>
+              <option id="fixture346"></option>
+              <option id="fixture347"></option>
+              <option id="fixture348"></option>
+              <option id="fixture349"></option>
+              <option id="fixture350"></option>
+              <option id="fixture351"></option>
+              <option id="fixture352"></option>
+              <option id="fixture353"></option>
+              <option id="fixture354"></option>
+              <option id="fixture355"></option>
+              <option id="fixture356"></option>
+              <option id="fixture357"></option>
+              <option id="fixture358"></option>
+              <option id="fixture359"></option>
+              <option id="fixture360"></option>
+              <option id="fixture361"></option>
+              <option id="fixture362"></option>
+              <option id="fixture363"></option>
+              <option id="fixture364"></option>
+              <option id="fixture365"></option>
+              <option id="fixture366"></option>
+              <option id="fixture367"></option>
+              <option id="fixture368"></option>
+              <option id="fixture369"></option>
+              <option id="fixture370"></option>
+              <option id="fixture371"></option>
+              <option id="fixture372"></option>
+              <option id="fixture373"></option>
+              <option id="fixture374"></option>
+              <option id="fixture375"></option>
+              <option id="fixture376"></option>
+              <option id="fixture377"></option>
+              <option id="fixture378"></option>
+              <option id="fixture379"></option>
+              <option id="fixture380"></option>
           </select id = "type" name = "type">
             <div class="gap" ></div>
+            <!-- Input statements for the amount of goals in the game -->
             <input id="homeGoals" type="number" placeholder="Number of Home Goals...">
             <input id="awayGoals" type="number" placeholder="Number of Away Goals...">
             <div class="gap" ></div>
