Hiding Selected Fixtures

--- a/HTMLPages/resultInput.html
+++ b/HTMLPages/resultInput.html
@@ -45,6 +45,7 @@
             <!-- Select statement to show all of the fixtures needed for the tournaments -->
             <!-- There are 380 options as that is the maximum amount that will be generated, when there are 20 teams in a round robin tournament -->
             <select id="fixtureSelected">
+              <option id="default">Select Fixture</option>
               <option id="fixture1"></option>
               <option id="fixture2"></option>
               <option id="fixture3"></option>
