--- a/HTMLPages/Knockoutfinal.html
+++ b/HTMLPages/Knockoutfinal.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
+
+  <!-- Onload function is to call the function to setup this page, filling in the names of the teams and fixtures for the tournament-->
   <body onload="knockoutSetup()">
     <div class="container">
 
@@ -105,6 +107,7 @@
                   <div class="tab-pane fade show active" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tabs-4">
                     <h1>Final Fixture</h1>
                     <br>
+                    <!-- id to allow the system to input the fixture needed for the final onto the website -->
                     <div id="finalFixture"></div>
                   </div>
                 </div>
