--- a/HTMLPages/Knockoutquarter.html
+++ b/HTMLPages/Knockoutquarter.html
@@ -104,6 +104,7 @@
                   <div class="tab-pane fade show active" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
                     <h1>Quarter Finals Fixtures</h1>
                     <br>
+                    <!-- ids to allow the system to input the fixture needed for the quarter finals onto the website -->
                     <div id="quarterFixture1"></div>
                     <div id="quarterFixture2"></div>
                     <div id="quarterFixture3"></div>
