--- a/HTMLPages/Knockoutr16.html
+++ b/HTMLPages/Knockoutr16.html
@@ -105,6 +105,7 @@
                   <div class="tab-pane fade show active" id="ex1-tabs-1" aria-labelledby="ex1-tab-1">
                     <h1>Round of Sixteen Fixtures</h1>
                     <br>
+                    <!-- ids to allow the system to input the fixture needed for the round of 16 games onto the website -->
                     <div id="r16Fixture1"></div>
                     <div id="r16Fixture2"></div>
                     <div id="r16Fixture3"></div>
