--- a/HTMLPages/Knockoutsemi.html
+++ b/HTMLPages/Knockoutsemi.html
@@ -103,6 +103,7 @@
                 <div class="tab-pane fade show active" id="ex1-tabs-3" aria-labelledby="ex1-tab-3">
                   <h1>Semi Finals Fixtures</h1>
                   <br>
+                  <!-- ids to allow the system to input the fixtures needed for the semi finals onto the website -->
                   <div id="semiFixture1"></div>
                   <div id="semiFixture2"></div>
                 </div>
