--- a/HTMLPages/checkWebsite.html
+++ b/HTMLPages/checkWebsite.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
+
+  <!-- The onload function is to be called to decide what website the system needs to load -->
+  <!-- It depends on what the tournamentType that the user has entered -->
   <body onload="checkWebsite()">
     <script src="/JavascriptFiles/script3.js"></script>
   </body>
