--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -44,6 +44,7 @@
     <div></div>
     <form onSubmit="return formSubmit1()">
             <input id="teamNmb" type="number" placeholder="Enter amount of teams...">
+            <!-- Select option to give the user the two options for the tournamentType-->
             <select id = "type" name = "type">
                 <option value="roundRobin">Round Robin</option>
                 <option value="knockout">Knockout</option>
