--- a/HTMLPages/TeamPages/team19.html
+++ b/HTMLPages/TeamPages/team19.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" type="text/css" href="/CSSFiles/style.css" media="screen">
     
   </head>
+
+  <!-- Onload function to generate and then display the fixtures that will be put into the divs -->
   <body onload="teamSetup()" >
     <h1>Fixture Generator</h1>
 
@@ -69,7 +71,7 @@
             <!-- Your second column here -->
             <h2>Away Fixtures</h2>
 
-            <!-- Divs to allow space to put the home fixtures into -->
+            <!-- Divs to allow space to put the away fixtures into -->
             <div  class="fixture" id="awaymatch20"></div>
             <div  class="fixture" id="awaymatch21"></div>
             <div  class="fixture" id="awaymatch22"></div>
