Updating comments and abbreviations League Table

--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -42,6 +42,7 @@
 
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
+    <!-- Onsubmit calls the function to process and act upon the results from the form-->
     <form onSubmit="return formSubmit1()">
             <input id="teamNmb" type="number" placeholder="Enter amount of teams...">
             <!-- Select option to give the user the two options for the tournamentType-->
