--- a/HTMLPages/index.html
+++ b/HTMLPages/index.html
@@ -35,9 +35,12 @@
     <br>
     <h1>League Startup Page</h1>
     <p class="instructions" >Enter the amount of teams (between 2 and 20) and Enter the Type of Tournament wanted</p>
-    <br>
     <p class="instructions" >Knockout tournaments are only allowed to have 16 teams in them</p>
     <p class="instructions" >Any other amount will be rejected by the system</p>
+    <br>
+    <p class="instructions" >Use the <b>Team Input Page</b> to change the name of any team in your tournament</p>
+    <p class="instructions" >Use the <b>League Table and Fixtures Page</b> to check the league table and fixtures of the tournament</p>
+    <p class="instructions" >Use the <b>Results Input Page</b> to input the results of fixtures</p>
     <br>
 
     <!-- The HTML code needed for the form to be submitted on this page-->
